--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <p>Gestão de Aventureiros</p>
     </div>
 
-    <div class="nes-container with-title is-centered" style="border-color: white;">
-        <p class="title" style="background-color: black; color: white;">Novo Recruta</p>
-        <div style="background-color: black; color: white; padding: 1rem;">
+    <div class="nes-container is-centered is-dark" style="border-color: white;">
+        <p style="background-color: transparent; color: white;">Novo Recruta</p>
+        <div style="background-color: transparent; color: white; padding: 1rem;">
             
             <div class="nes-field">
                 <label for="nome">Nome do Herói:</label>
